Add CNAME + minor update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class = 'content'>
-          <h2 class= "text-center">What i'm doing now </h2>
+          <h2 class= "text-center">And Now ... </h2>
           <p>I continue to improve my skills on ruby on rails</p>
           <p>I write a lot ... <a href="https://medium.com/@mathieunicolas">take a look of my blog</a></p>
           <p>And i travel around the world for experiment the Digital Nomad style ...</p>
